baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_four_literal_arms.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function fails(x: int) -> int {
    load_var x
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L5

  L0:
    load_var x
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L4

  L1:
    load_var x
    load_const 2
    cmp_op ==
    pop_jump_if_false L2
    jump L3

  L2:
    load_const "other"
    throw

  L3:
    load_const "crash"
    throw

  L4:
    load_const "bang"
    throw

  L5:
    load_const "boom"
    throw
}

function main() -> int {
    load_const 1
    call user.fails
    jump L8
    load_var e
    load_const "boom"
    cmp_op ==
    pop_jump_if_false L0
    jump L7

  L0:
    load_var e
    load_const "bang"
    cmp_op ==
    pop_jump_if_false L1
    jump L6

  L1:
    load_var e
    load_const "crash"
    cmp_op ==
    pop_jump_if_false L2
    jump L5

  L2:
    load_var e
    load_const "other"
    cmp_op ==
    pop_jump_if_false L3
    jump L4

  L3:
    load_var e
    throw_if_panic
    load_const 0
    jump L8

  L4:
    load_const 40
    jump L8

  L5:
    load_const 30
    jump L8

  L6:
    load_const 20
    jump L8

  L7:
    load_const 10

  L8:
    return
}
