baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_four_typed_arms_jump_table.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function main() -> int {
    load_const 2
    call user.risky
    jump L5
    load_var e
    type_tag
    jump_table [L1, L2, L4, _, L3], default L0

  L0:
    load_var e
    throw

  L1: ErrD
    load_const 40
    jump L5

  L2: ErrC
    load_const 30
    jump L5

  L3: ErrB
    load_const 20
    jump L5

  L4: ErrA
    load_const 10

  L5:
    return
}

function risky(mode: int) -> int {
    load_var mode
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L5

  L0:
    load_var mode
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L4

  L1:
    load_var mode
    load_const 2
    cmp_op ==
    pop_jump_if_false L2
    jump L3

  L2:
    alloc_instance ErrD
    copy 0
    load_const 4
    store_field .x
    throw

  L3:
    alloc_instance ErrC
    copy 0
    load_const 3
    store_field .x
    throw

  L4:
    alloc_instance ErrB
    copy 0
    load_const 2
    store_field .x
    throw

  L5:
    alloc_instance ErrA
    copy 0
    load_const 1
    store_field .x
    throw
}
