baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_four_typed_arms_plus_wildcard_jump_table.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function main() -> int {
    load_const 4
    call user.risky
    jump L5
    load_var e
    type_tag
    jump_table [L1, L2, L4, _, L3], default L0

  L0:
    load_var e
    throw_if_panic
    load_const 99
    jump L5

  L1: ErrD
    load_const 40
    jump L5

  L2: ErrC
    load_const 30
    jump L5

  L3: ErrB
    load_const 20
    jump L5

  L4: ErrA
    load_const 10

  L5:
    return
}

function risky(mode: int) -> int {
    load_var mode
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L7

  L0:
    load_var mode
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L6

  L1:
    load_var mode
    load_const 2
    cmp_op ==
    pop_jump_if_false L2
    jump L5

  L2:
    load_var mode
    load_const 3
    cmp_op ==
    pop_jump_if_false L3
    jump L4

  L3:
    load_const "unknown"
    throw

  L4:
    alloc_instance ErrD
    load_const 4
    init_field .x
    throw

  L5:
    alloc_instance ErrC
    load_const 3
    init_field .x
    throw

  L6:
    alloc_instance ErrB
    load_const 2
    init_field .x
    throw

  L7:
    alloc_instance ErrA
    load_const 1
    init_field .x
    throw
}
