baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_four_user_classes_instanceof_chain.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function api(mode: int) -> int {
    load_var mode
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L7

  L0:
    load_var mode
    load_const 1
    cmp_op ==
    pop_jump_if_false L1
    jump L6

  L1:
    load_var mode
    load_const 2
    cmp_op ==
    pop_jump_if_false L2
    jump L5

  L2:
    load_var mode
    load_const 3
    cmp_op ==
    pop_jump_if_false L3
    jump L4

  L3:
    load_const "unknown"
    throw

  L4:
    alloc_instance Timeout
    load_const 5000
    init_field .ms
    throw

  L5:
    alloc_instance RateLimit
    load_const 30
    init_field .retryAfter
    throw

  L6:
    alloc_instance NotFound
    load_const "/users"
    init_field .path
    throw

  L7:
    alloc_instance AuthError
    load_const "expired"
    init_field .reason
    throw
}

function main() -> int {
    load_const 2
    call user.api
    jump L5
    load_var e
    type_tag
    jump_table [L3, L2, _, _, L4, L1], default L0

  L0:
    load_var e
    throw_if_panic
    load_const 0
    jump L5

  L1: Timeout
    load_const 4
    jump L5

  L2: RateLimit
    load_const 3
    jump L5

  L3: NotFound
    load_const 2
    jump L5

  L4: AuthError
    load_const 1

  L5:
    return
}
