baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_mixed_literal_and_typed_no_switch.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function fails(mode: int) -> int {
    load_var mode
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    alloc_instance AppError
    load_const 404
    init_field .code
    throw

  L1:
    load_const "boom"
    throw
}

function main() -> int {
    load_const 0
    call user.fails
    jump L4
    load_var e
    load_const "boom"
    cmp_op ==
    pop_jump_if_false L0
    jump L3

  L0:
    load_var e
    is_type AppError
    pop_jump_if_false L1
    jump L2

  L1:
    load_var e
    throw_if_panic
    load_const 3
    jump L4

  L2:
    load_const 2
    jump L4

  L3:
    load_const 1

  L4:
    return
}
