baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_mixed_named_and_anonymous_bindings.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function fails() -> string {
    alloc_instance NetworkError
    load_const "http://example.com"
    init_field .url
    throw
}

function main() -> string {
    call user.fails
    jump L5
    load_var e
    type_tag
    jump_table [L2, _, L1, L4, _, _, L3], default L0

  L0:
    load_var e
    throw_if_panic
    load_const "unknown"
    jump L5

  L1: RateLimit
    load_const "rate limited"
    jump L5

  L2: NotFound
    load_var e
    load_field .path
    jump L5

  L3: AuthError
    load_var e
    load_field .reason
    jump L5

  L4: NetworkError
    load_var e
    load_field .url

  L5:
    return
}
