baml_language/crates/baml_tests/tests/snapshots/exceptions__catch_two_typed_arms_sequential_chain.snap
---
source: crates/baml_tests/tests/exceptions.rs
expression: output.bytecode
---
function fails(mode: int) -> int {
    load_var mode
    load_const 0
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    alloc_instance ParseError
    copy 0
    load_const "bad"
    store_field .msg
    throw

  L1:
    alloc_instance NetworkError
    copy 0
    load_const "http://x"
    store_field .url
    throw
}

function main() -> int {
    load_const 1
    call user.fails
    jump L4
    load_var e
    is_type NetworkError
    pop_jump_if_false L0
    jump L3

  L0:
    load_var e
    is_type ParseError
    pop_jump_if_false L1
    jump L2

  L1:
    load_var e
    throw

  L2:
    load_const 2
    jump L4

  L3:
    load_const 1

  L4:
    return
}
